third_party/rust/chromium_crates_io/vendor/zerocopy-0.8.23/tests/ui-msrv/try_transmute_mut-alignment-increase.stderr
warning: unused variable: `increase_size`
  --> tests/ui-msrv/try_transmute_mut-alignment-increase.rs:20:9
   |
20 |     let increase_size: Result<&mut AU16, _> = try_transmute_mut!(src);
   |         ^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_increase_size`
   |
   = note: `#[warn(unused_variables)]` on by default

error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> tests/ui-msrv/try_transmute_mut-alignment-increase.rs:20:47
   |
20 |     let increase_size: Result<&mut AU16, _> = try_transmute_mut!(src);
   |                                               ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: source type: `AlignOf<[u8; 2]>` (8 bits)
   = note: target type: `MaxAlignsOf<[u8; 2], AU16>` (16 bits)
   = note: this error originates in the macro `$crate::assert_align_gt_eq` (in Nightly builds, run with -Z macro-backtrace for more info)
